Ajout : 'students/add' 'delete' 'update'
Ajout : 'students/add' 'delete' 'update'

--- a/jour5/runtrack_express/projet_web/views/index.html
+++ b/jour5/runtrack_express/projet_web/views/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <a href="/students">Liste des étudiants</a>
+    <a href="/students/add">Ajouter un étudiant</a>
+    <a href="/students/delete">Supprimer un étudiant</a>
+    <a href="/students/update">Modifier un étudiant</a>
+    <a href="/years">Liste des années</a>
 </body>
 </html>
